docusaurus/versioned_docs/version-0.5.0/014_AsyncAPI.md

<!-- WARNING: THIS FILE WAS AUTOGENERATED! DO NOT EDIT! -->

``` python
from datetime import datetime

from pydantic import EmailStr
```

``` python
import pytest
from rich.pretty import pprint
```

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L38"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### KafkaMessage

>      KafkaMessage ()

Create a new model by parsing and validating input data from keyword
arguments.

Raises ValidationError if the input data cannot be parsed to form a
valid model.

``` python
class MyMsg(KafkaMessage):
    dt: datetime = Field(..., example=datetime.now())
    td: timedelta = Field(timedelta(days=1, hours=12, minutes=2, seconds=1.2345678))


my_msg = MyMsg(dt=datetime(year=2021, month=12, day=31, hour=23, minute=59, second=58))
pprint(my_msg)
expected = '{"dt": "2021-12-31T23:59:58", "td": "P1DT12H2M1.234568S"}'
actual = my_msg.json()
assert actual == expected, f"{actual} != {expected}"

actual = MyMsg.parse_raw(actual)
assert actual == my_msg
```

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L74"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### SecuritySchema

>      SecuritySchema (security_type:__main__.SecurityType,
>                      description:Union[str,NoneType]=None,
>                      name:Union[str,NoneType]=None,
>                      api_key_loc:Union[__main__.APIKeyLocation,NoneType]=None,
>                      scheme:Union[str,NoneType]=None,
>                      bearerFormat:Union[str,NoneType]=None,
>                      flows:Union[str,NoneType]=None,
>                      openIdConnectUrl:Union[str,NoneType]=None)

Create a new model by parsing and validating input data from keyword
arguments.

Raises ValidationError if the input data cannot be parsed to form a
valid model.

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L63"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### APIKeyLocation

>      APIKeyLocation (value, names=None, module=None, qualname=None, type=None,
>                      start=1)

An enumeration.

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L47"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### SecurityType

>      SecurityType (value, names=None, module=None, qualname=None, type=None,
>                    start=1)

An enumeration.

``` python
sec_schema = SecuritySchema(type="plain")
pprint(sec_schema)

actual = sec_schema.json()
print(f"JSON={actual}")
assert actual == '{"type": "plain"}', actual

actual = SecuritySchema.parse_raw(sec_schema.json())
pprint(actual)
assert actual == sec_schema
```

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L107"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### KafkaBroker

>      KafkaBroker (url:str, description:str='Kafka broker', port:str='9092',
>                   protocol:str='kafka',
>                   security:Union[__main__.SecuritySchema,NoneType]=None)

Kafka broker

``` python
kafka_broker = KafkaBroker(url="kafka")
pprint(kafka_broker)

expected = '{"url": "kafka", "description": "Kafka broker", "protocol": "kafka", "variables": {"port": {"default": "9092"}}}'
print(kafka_broker.json())
assert kafka_broker.json() == expected

# serialization/deserialization test
actual = KafkaBroker.parse_raw(kafka_broker.json())
assert actual == kafka_broker
```

``` python
sec_kafka_broker = KafkaBroker(
    url="kafka", protocol="kafka-secure", security=SecuritySchema(type="plain")
)
pprint(sec_kafka_broker)

expected = '{"url": "kafka", "description": "Kafka broker", "protocol": "kafka-secure", "security": {"type": "plain"}, "variables": {"port": {"default": "9092"}}}'
actual = sec_kafka_broker.json()
print(f"JSON={actual}")
assert actual == expected

# serialization/deserialization test
actual = KafkaBroker.parse_raw(sec_kafka_broker.json())
assert actual == sec_kafka_broker
```

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L137"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### KafkaServiceInfo

>      KafkaServiceInfo (title:str='Title', version:str='0.0.1',
>                        description:str='Description of the service',
>                        contact:__main__.ContactInfo)

Create a new model by parsing and validating input data from keyword
arguments.

Raises ValidationError if the input data cannot be parsed to form a
valid model.

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L131"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### ContactInfo

>      ContactInfo (name:str, url:pydantic.networks.HttpUrl, email:str)

Create a new model by parsing and validating input data from keyword
arguments.

Raises ValidationError if the input data cannot be parsed to form a
valid model.

``` python
my_contact = ContactInfo(
    name="ACME", url="https://www.acme.com", email="noreply@acme.com"
)
service_info = KafkaServiceInfo(contact=my_contact)
pprint(service_info)
```

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L146"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### KafkaBrokers

>      KafkaBrokers (brokers:Dict[str,__main__.KafkaBroker])

Create a new model by parsing and validating input data from keyword
arguments.

Raises ValidationError if the input data cannot be parsed to form a
valid model.

``` python
kafka_brokers = KafkaBrokers(brokers={"dev": kafka_broker, "staging": sec_kafka_broker})
pprint(kafka_brokers)

expected = '{"brokers": {"dev": {"url": "kafka", "description": "Kafka broker", "protocol": "kafka", "variables": {"port": {"default": "9092"}}}, "staging": {"url": "kafka", "description": "Kafka broker", "protocol": "kafka-secure", "security": {"type": "plain"}, "variables": {"port": {"default": "9092"}}}}}'

actual = kafka_brokers.json()
print(f"JSON={actual}")
assert actual == expected, actual

actual = KafkaBrokers.parse_raw(kafka_brokers.json())
pprint(actual)
assert actual == kafka_brokers
```

``` python
brokers_json = '{"brokers": {"dev": {"url": "kafka", "description": "Kafka broker", "protocol": "kafka", "variables": {"port": {"default": "9092"}}}, "staging": {"url": "kafka", "description": "Kafka broker", "protocol": "kafka-secure", "security": {"type": "plain"}, "variables": {"port": {"default": "9092"}}}}}'
kafka_brokers = KafkaBrokers.parse_raw(brokers_json)
pprint(kafka_brokers)

my_contact = ContactInfo(
    name="ACME", url="https://www.acme.com", email="noreply@acme.com"
)
kafka_service_info = KafkaServiceInfo(contact=my_contact)
pprint(kafka_service_info)


class MyInfo(KafkaMessage):
    mobile: str = Field(..., example="+385987654321")
    name: str = Field(..., example="James Bond")


class MyMsgUrl(KafkaMessage):
    info: MyInfo = Field(..., example=dict(mobile="+385987654321", name="James Bond"))
    url: HttpUrl = Field(..., example="https://sis.gov.uk/agents/007")


class MyMsgEmail(KafkaMessage):
    msg_url: MyMsgUrl = Field(
        ...,
        example=dict(
            info=dict(mobile="+385987654321", name="James Bond"),
            url="https://sis.gov.uk/agents/007",
        ),
    )
    email: EmailStr = Field(..., example="agent-007@sis.gov.uk")


def on_my_topic_one(msg: MyMsgUrl) -> None:
    raise NotImplemented


async def on_my_topic_2(msg: MyMsgEmail) -> None:
    raise NotImplemented


async def to_my_topic_3(msg) -> MyMsgUrl:
    raise NotImplemented


async def to_my_topic_4(msg) -> KafkaEvent[MyMsgEmail]:
    raise NotImplemented


consumers = {"my_topic_1": on_my_topic_one, "my_topic_2": on_my_topic_2}
producers = {"my_topic_3": to_my_topic_3, "my_topic_4": to_my_topic_4}

pprint(dict(consumers=consumers, producers=producers))
assert set(consumers.keys()) == set(["my_topic_1", "my_topic_2"])
assert set(producers.keys()) == set(["my_topic_3", "my_topic_4"])
```

``` python
expected = MyMsgUrl
actual = _get_msg_cls_for_producer(to_my_topic_3)
display(actual)
assert actual == expected
```

    __main__.MyMsgUrl

``` python
expected = MyMsgEmail
actual = _get_msg_cls_for_producer(to_my_topic_4)
display(actual)
assert actual == expected
```

    __main__.MyMsgEmail

``` python
def no_return(i: int):
    pass


with pytest.raises(ValueError) as e:
    _get_msg_cls_for_producer(no_return)

assert e.value.args == (
    "Producer function must have a defined return value, got <class 'NoneType'> as return value",
)
```

``` python
expected = MyMsgUrl
actual = _get_msg_cls_for_consumer(on_my_topic_one)
display(actual)
assert actual == expected
```

    __main__.MyMsgUrl

``` python
def no_input():
    pass


with pytest.raises(ValueError) as e:
    _get_msg_cls_for_consumer(no_input)

assert e.value.args == ("Consumer function must have only one input param, got []",)


def has_return(a: int) -> int:
    pass


with pytest.raises(ValueError) as e:
    _get_msg_cls_for_consumer(has_return)

assert e.value.args == ("Consumer function cannot return any value, got <class 'int'>",)
```

``` python
expected = {"subscribe": {"message": {"$ref": "#/components/messages/MyMsgEmail"}}}

actual = _get_topic_dict(on_my_topic_2, "subscribe")
pprint(actual)

assert actual == expected
```

``` python
expected = {"publish": {"message": {"$ref": "#/components/messages/MyMsgEmail"}}}

actual = _get_topic_dict(to_my_topic_4, "publish")
pprint(actual)

assert actual == expected
```

``` python
expected = {
    "my_topic_1": {
        "subscribe": {"message": {"$ref": "#/components/messages/MyMsgUrl"}}
    },
    "my_topic_2": {
        "subscribe": {"message": {"$ref": "#/components/messages/MyMsgEmail"}}
    },
    "my_topic_3": {"publish": {"message": {"$ref": "#/components/messages/MyMsgUrl"}}},
    "my_topic_4": {
        "publish": {"message": {"$ref": "#/components/messages/MyMsgEmail"}}
    },
}
actual = _get_channels_schema(consumers, producers)
pprint(actual)

assert actual == expected
```

``` python
expected = {
    "definitions": {
        "MyInfo": {
            "title": "MyInfo",
            "type": "object",
            "properties": {
                "mobile": {
                    "title": "Mobile",
                    "example": "+385987654321",
                    "type": "string",
                },
                "name": {"title": "Name", "example": "James Bond", "type": "string"},
            },
            "required": ["mobile", "name"],
        },
        "MyMsgUrl": {
            "title": "MyMsgUrl",
            "type": "object",
            "properties": {
                "info": {
                    "title": "Info",
                    "example": {"mobile": "+385987654321", "name": "James Bond"},
                    "allOf": [{"$ref": "#/definitions/MyInfo"}],
                },
                "url": {
                    "title": "Url",
                    "example": "https://sis.gov.uk/agents/007",
                    "minLength": 1,
                    "maxLength": 2083,
                    "format": "uri",
                    "type": "string",
                },
            },
            "required": ["info", "url"],
        },
        "MyMsgEmail": {
            "title": "MyMsgEmail",
            "type": "object",
            "properties": {
                "msg_url": {
                    "title": "Msg Url",
                    "example": {
                        "info": {"mobile": "+385987654321", "name": "James Bond"},
                        "url": "https://sis.gov.uk/agents/007",
                    },
                    "allOf": [{"$ref": "#/definitions/MyMsgUrl"}],
                },
                "email": {
                    "title": "Email",
                    "example": "agent-007@sis.gov.uk",
                    "type": "string",
                    "format": "email",
                },
            },
            "required": ["msg_url", "email"],
        },
    }
}

msg_definitions = _get_kafka_msg_definitions(consumers, producers)
assert msg_definitions == expected
```

``` python
expected = {
    "msg_url": {
        "info": {"name": "James Bond", "mobile": "+385987654321"},
        "url": "https://sis.gov.uk/agents/007",
    },
    "email": "agent-007@sis.gov.uk",
}

actual = _get_example(MyMsgEmail)
pprint(actual)

assert actual == expected
```

``` python
expected = {
    "MyInfo": {
        "payload": {
            "title": "MyInfo",
            "type": "object",
            "properties": {
                "mobile": {
                    "title": "Mobile",
                    "example": "+385987654321",
                    "type": "string",
                },
                "name": {"title": "Name", "example": "James Bond", "type": "string"},
            },
            "required": ["mobile", "name"],
        }
    },
    "MyMsgUrl": {
        "payload": {
            "title": "MyMsgUrl",
            "type": "object",
            "properties": {
                "info": {
                    "title": "Info",
                    "example": {"mobile": "+385987654321", "name": "James Bond"},
                    "allOf": [{"$ref": "#/definitions/MyInfo"}],
                },
                "url": {
                    "title": "Url",
                    "example": "https://sis.gov.uk/agents/007",
                    "minLength": 1,
                    "maxLength": 2083,
                    "format": "uri",
                    "type": "string",
                },
            },
            "required": ["info", "url"],
            "example": {
                "info": {"mobile": "+385987654321", "name": "James Bond"},
                "url": "https://sis.gov.uk/agents/007",
            },
        }
    },
    "MyMsgEmail": {
        "payload": {
            "title": "MyMsgEmail",
            "type": "object",
            "properties": {
                "msg_url": {
                    "title": "Msg Url",
                    "example": {
                        "info": {"mobile": "+385987654321", "name": "James Bond"},
                        "url": "https://sis.gov.uk/agents/007",
                    },
                    "allOf": [{"$ref": "#/definitions/MyMsgUrl"}],
                },
                "email": {
                    "title": "Email",
                    "example": "agent-007@sis.gov.uk",
                    "type": "string",
                    "format": "email",
                },
            },
            "required": ["msg_url", "email"],
            "example": {
                "msg_url": {
                    "info": {"mobile": "+385987654321", "name": "James Bond"},
                    "url": "https://sis.gov.uk/agents/007",
                },
                "email": "agent-007@sis.gov.uk",
            },
        }
    },
}

actual = _get_msg_definitions_with_examples(consumers, producers)
pprint(actual)
assert actual == expected
```

expected = { “staging_default_security": {“type": “plain"},
“production_default_security": {“type": “plain"}, }

brokers = KafkaBrokers( brokers={ “dev": KafkaBroker( url=“localhost",
description=“dev", port=“9092", ) } )

display(brokers)

actual = \_get_security_schemes(brokers) pprint(actual) assert actual ==
expected, actual

``` python
components = _get_components_schema(consumers, producers, kafka_brokers)
pprint(components)
```

``` python
expected = {
    "dev": {
        "url": "kafka",
        "description": "Kafka broker",
        "protocol": "kafka",
        "variables": {"port": {"default": "9092"}},
    },
    "staging": {
        "url": "kafka",
        "description": "Kafka broker",
        "protocol": "kafka-secure",
        "security": [{"staging_default_security": []}],
        "variables": {"port": {"default": "9092"}},
    },
}

actual = _get_servers_schema(kafka_brokers)
pprint(actual)
assert actual == expected, actual
```

``` python
expected = {
    "asyncapi": "2.5.0",
    "info": {
        "title": "Title",
        "version": "0.0.1",
        "description": "Description of the service",
        "contact": {
            "name": "ACME",
            "url": "https://www.acme.com",
            "email": "noreply@acme.com",
        },
    },
    "servers": {
        "dev": {
            "url": "kafka",
            "description": "Kafka broker",
            "protocol": "kafka",
            "variables": {"port": {"default": "9092"}},
        },
        "staging": {
            "url": "kafka",
            "description": "Kafka broker",
            "protocol": "kafka-secure",
            "security": [{"staging_default_security": []}],
            "variables": {"port": {"default": "9092"}},
        },
    },
    "channels": {
        "my_topic_1": {
            "subscribe": {"message": {"$ref": "#/components/messages/MyMsgUrl"}}
        },
        "my_topic_2": {
            "subscribe": {"message": {"$ref": "#/components/messages/MyMsgEmail"}}
        },
        "my_topic_3": {
            "publish": {"message": {"$ref": "#/components/messages/MyMsgUrl"}}
        },
        "my_topic_4": {
            "publish": {"message": {"$ref": "#/components/messages/MyMsgEmail"}}
        },
    },
    "components": {
        "securitySchemes": {"staging_default_security": {"type": "plain"}},
        "messages": {
            "MyMsgUrl": {
                "payload": {
                    "title": "MyMsgUrl",
                    "type": "object",
                    "properties": {
                        "info": {
                            "title": "Info",
                            "example": {
                                "mobile": "+385987654321",
                                "name": "James Bond",
                            },
                            "allOf": [{"$ref": "#/components/schemas/MyInfo"}],
                        },
                        "url": {
                            "title": "Url",
                            "example": "https://sis.gov.uk/agents/007",
                            "minLength": 1,
                            "maxLength": 2083,
                            "format": "uri",
                            "type": "string",
                        },
                    },
                    "required": ["info", "url"],
                    "example": {
                        "info": {"mobile": "+385987654321", "name": "James Bond"},
                        "url": "https://sis.gov.uk/agents/007",
                    },
                }
            },
            "MyMsgEmail": {
                "payload": {
                    "title": "MyMsgEmail",
                    "type": "object",
                    "properties": {
                        "msg_url": {
                            "title": "Msg Url",
                            "example": {
                                "info": {
                                    "mobile": "+385987654321",
                                    "name": "James Bond",
                                },
                                "url": "https://sis.gov.uk/agents/007",
                            },
                            "allOf": [{"$ref": "#/components/messages/MyMsgUrl"}],
                        },
                        "email": {
                            "title": "Email",
                            "example": "agent-007@sis.gov.uk",
                            "type": "string",
                            "format": "email",
                        },
                    },
                    "required": ["msg_url", "email"],
                    "example": {
                        "msg_url": {
                            "info": {"mobile": "+385987654321", "name": "James Bond"},
                            "url": "https://sis.gov.uk/agents/007",
                        },
                        "email": "agent-007@sis.gov.uk",
                    },
                }
            },
        },
        "schemas": {
            "MyInfo": {
                "payload": {
                    "title": "MyInfo",
                    "type": "object",
                    "properties": {
                        "mobile": {
                            "title": "Mobile",
                            "example": "+385987654321",
                            "type": "string",
                        },
                        "name": {
                            "title": "Name",
                            "example": "James Bond",
                            "type": "string",
                        },
                    },
                    "required": ["mobile", "name"],
                }
            }
        },
    },
}
asyncapi_schema = _get_asyncapi_schema(
    consumers, producers, kafka_brokers, kafka_service_info
)
pprint(asyncapi_schema)
assert asyncapi_schema == expected
```

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L354"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### yaml_file_cmp

>      yaml_file_cmp (file_1:Union[pathlib.Path,str],
>                     file_2:Union[pathlib.Path,str])

``` python
with tempfile.TemporaryDirectory() as d:
    try:
        asyncapi_path = Path(d).parent / "003_AsyncAPI" / "asyncapi"
        if asyncapi_path.exists():
            shutil.rmtree(asyncapi_path)
        spec_path = Path(asyncapi_path) / "spec" / "asyncapi.yml"

        is_spec_built = _generate_async_spec(
            consumers=consumers,
            producers=producers,
            kafka_brokers=kafka_brokers,
            kafka_service_info=kafka_service_info,
            spec_path=spec_path,
            force_rebuild=False,
        )
        assert is_spec_built
        assert (Path(asyncapi_path) / "spec" / "asyncapi.yml").exists()

        is_spec_built = _generate_async_spec(
            consumers=consumers,
            producers=producers,
            kafka_brokers=kafka_brokers,
            kafka_service_info=kafka_service_info,
            spec_path=spec_path,
            force_rebuild=False,
        )
        assert not is_spec_built
        assert (Path(asyncapi_path) / "spec" / "asyncapi.yml").exists()

        is_spec_built = _generate_async_spec(
            consumers=consumers,
            producers=producers,
            kafka_brokers=kafka_brokers,
            kafka_service_info=kafka_service_info,
            spec_path=spec_path,
            force_rebuild=True,
        )
        assert is_spec_built
        assert (Path(asyncapi_path) / "spec" / "asyncapi.yml").exists()

    finally:
        shutil.rmtree(asyncapi_path)
```

    [INFO] __main__: Old async specifications at '/tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml' does not exist.
    [INFO] __main__: New async specifications generated at: '/tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml'
    [INFO] __main__: Keeping the old async specifications at: '/tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml'
    [INFO] __main__: New async specifications generated at: '/tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml'

``` python
with tempfile.TemporaryDirectory() as d:
    try:
        asyncapi_path = Path(d).parent / "003_AsyncAPI" / "asyncapi"
        if asyncapi_path.exists():
            shutil.rmtree(asyncapi_path)
        spec_path = Path(asyncapi_path) / "spec" / "asyncapi.yml"
        docs_path = Path(asyncapi_path) / "docs"

        is_spec_built = _generate_async_spec(
            consumers=consumers,
            producers=producers,
            kafka_brokers=kafka_brokers,
            kafka_service_info=kafka_service_info,
            spec_path=spec_path,
            force_rebuild=False,
        )

        _generate_async_docs(
            spec_path=spec_path,
            docs_path=docs_path,
        )
        assert docs_path.exists()
    finally:
        shutil.rmtree(asyncapi_path)
```

    [INFO] __main__: Old async specifications at '/tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml' does not exist.
    [INFO] __main__: New async specifications generated at: '/tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml'
    [INFO] __main__: Async docs generated at '/tmp/003_AsyncAPI/asyncapi/docs'
    [INFO] __main__: Output of '$ npx -y -p @asyncapi/generator ag /tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml @asyncapi/html-template -o /tmp/003_AsyncAPI/asyncapi/docs --force-write'

    Done! ✨
    Check out your shiny new generated files at /tmp/003_AsyncAPI/asyncapi/docs.

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L446"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### export_async_spec

>      export_async_spec (consumers:Dict[str,Callable[[pydantic.main.BaseModel],
>                         Union[Awaitable[NoneType],NoneType]]], producers:Dict[
>                         str,Union[Callable[...,Union[pydantic.main.BaseModel,f
>                         astkafka.KafkaEvent[pydantic.main.BaseModel]]],Callabl
>                         e[...,Awaitable[Union[pydantic.main.BaseModel,fastkafk
>                         a.KafkaEvent[pydantic.main.BaseModel]]]]]],
>                         kafka_brokers:__main__.KafkaBrokers,
>                         kafka_service_info:__main__.KafkaServiceInfo,
>                         asyncapi_path:Union[pathlib.Path,str],
>                         force_rebuild:bool=True)

Export async specification to a given path

Params: path: path where the specification will be exported. If parent
subdirectories do not exist, they will be created.

``` python
with tempfile.TemporaryDirectory() as d:
    try:
        asyncapi_path = Path(d).parent / "003_AsyncAPI" / "asyncapi"
        if asyncapi_path.exists():
            shutil.rmtree(asyncapi_path)

        export_async_spec(
            consumers=consumers,
            producers=producers,
            kafka_brokers=kafka_brokers,
            kafka_service_info=kafka_service_info,
            asyncapi_path=asyncapi_path,
            force_rebuild=False,
        )
        #         !ls -al {asyncapi_path}
        assert (Path(asyncapi_path) / "spec" / "asyncapi.yml").exists()
        assert (Path(asyncapi_path) / "docs" / "index.html").exists()
    finally:
        shutil.rmtree(asyncapi_path)
```

    [INFO] __main__: Old async specifications at '/tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml' does not exist.
    [INFO] __main__: New async specifications generated at: '/tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml'
    [INFO] __main__: Async docs generated at '/tmp/003_AsyncAPI/asyncapi/docs'
    [INFO] __main__: Output of '$ npx -y -p @asyncapi/generator ag /tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml @asyncapi/html-template -o /tmp/003_AsyncAPI/asyncapi/docs --force-write'

    Done! ✨
    Check out your shiny new generated files at /tmp/003_AsyncAPI/asyncapi/docs.
