docusaurus/versioned_docs/version-0.6.0/014_AsyncAPI.md

<!-- WARNING: THIS FILE WAS AUTOGENERATED! DO NOT EDIT! -->

``` python
from datetime import datetime

from pydantic import EmailStr
```

``` python
import pytest
from rich.pretty import pprint
```

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L35"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### KafkaMessage

>      KafkaMessage ()

Create a new model by parsing and validating input data from keyword
arguments.

Raises ValidationError if the input data cannot be parsed to form a
valid model.

``` python
class MyMsg(KafkaMessage):
    dt: datetime = Field(..., example=datetime.now())
    td: timedelta = Field(timedelta(days=1, hours=12, minutes=2, seconds=1.2345678))


my_msg = MyMsg(dt=datetime(year=2021, month=12, day=31, hour=23, minute=59, second=58))
pprint(my_msg)
expected = '{"dt": "2021-12-31T23:59:58", "td": "P1DT12H2M1.234568S"}'
actual = my_msg.json()
assert actual == expected, f"{actual} != {expected}"

actual = MyMsg.parse_raw(actual)
assert actual == my_msg
```

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L71"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### SecuritySchema

>      SecuritySchema (security_type:__main__.SecurityType,
>                      description:Optional[str]=None, name:Optional[str]=None,
>                      api_key_loc:Optional[__main__.APIKeyLocation]=None,
>                      scheme:Optional[str]=None,
>                      bearerFormat:Optional[str]=None,
>                      flows:Optional[str]=None,
>                      openIdConnectUrl:Optional[str]=None)

Create a new model by parsing and validating input data from keyword
arguments.

Raises ValidationError if the input data cannot be parsed to form a
valid model.

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L60"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### APIKeyLocation

>      APIKeyLocation (value, names=None, module=None, qualname=None, type=None,
>                      start=1, boundary=None)

str(object=’’) -\> str str(bytes_or_buffer\[, encoding\[, errors\]\])
-\> str

Create a new string object from the given object. If encoding or errors
is specified, then the object must expose a data buffer that will be
decoded using the given encoding and error handler. Otherwise, returns
the result of object.\_\_str\_\_() (if defined) or repr(object).
encoding defaults to sys.getdefaultencoding(). errors defaults to
‘strict’.

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L44"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### SecurityType

>      SecurityType (value, names=None, module=None, qualname=None, type=None,
>                    start=1, boundary=None)

str(object=’’) -\> str str(bytes_or_buffer\[, encoding\[, errors\]\])
-\> str

Create a new string object from the given object. If encoding or errors
is specified, then the object must expose a data buffer that will be
decoded using the given encoding and error handler. Otherwise, returns
the result of object.\_\_str\_\_() (if defined) or repr(object).
encoding defaults to sys.getdefaultencoding(). errors defaults to
‘strict’.

``` python
sec_schema = SecuritySchema(type="plain")
pprint(sec_schema)

actual = sec_schema.json()
print(f"JSON={actual}")
assert actual == '{"type": "plain"}', actual

actual = SecuritySchema.parse_raw(sec_schema.json())
pprint(actual)
assert actual == sec_schema
```

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L104"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### KafkaBroker

>      KafkaBroker (url:str, description:str='Kafka broker', port:str='9092',
>                   protocol:str='kafka',
>                   security:Optional[__main__.SecuritySchema]=None)

Kafka broker

``` python
kafka_broker = KafkaBroker(url="kafka")
pprint(kafka_broker)

expected = '{"url": "kafka", "description": "Kafka broker", "protocol": "kafka", "variables": {"port": {"default": "9092"}}}'
print(kafka_broker.json())
assert kafka_broker.json() == expected

# serialization/deserialization test
actual = KafkaBroker.parse_raw(kafka_broker.json())
assert actual == kafka_broker
```

``` python
sec_kafka_broker = KafkaBroker(
    url="kafka", protocol="kafka-secure", security=SecuritySchema(type="plain")
)
pprint(sec_kafka_broker)

expected = '{"url": "kafka", "description": "Kafka broker", "protocol": "kafka-secure", "security": {"type": "plain"}, "variables": {"port": {"default": "9092"}}}'
actual = sec_kafka_broker.json()
print(f"JSON={actual}")
assert actual == expected

# serialization/deserialization test
actual = KafkaBroker.parse_raw(sec_kafka_broker.json())
assert actual == sec_kafka_broker
```

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L134"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### KafkaServiceInfo

>      KafkaServiceInfo (title:str='Title', version:str='0.0.1',
>                        description:str='Description of the service',
>                        contact:__main__.ContactInfo)

Create a new model by parsing and validating input data from keyword
arguments.

Raises ValidationError if the input data cannot be parsed to form a
valid model.

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L128"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### ContactInfo

>      ContactInfo (name:str, url:pydantic.networks.HttpUrl, email:str)

Create a new model by parsing and validating input data from keyword
arguments.

Raises ValidationError if the input data cannot be parsed to form a
valid model.

``` python
my_contact = ContactInfo(
    name="ACME", url="https://www.acme.com", email="noreply@acme.com"
)
service_info = KafkaServiceInfo(contact=my_contact)
pprint(service_info)
```

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L143"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### KafkaBrokers

>      KafkaBrokers (brokers:Dict[str,__main__.KafkaBroker])

Create a new model by parsing and validating input data from keyword
arguments.

Raises ValidationError if the input data cannot be parsed to form a
valid model.

``` python
kafka_brokers = KafkaBrokers(brokers={"dev": kafka_broker, "staging": sec_kafka_broker})
pprint(kafka_brokers)

expected = '{"brokers": {"dev": {"url": "kafka", "description": "Kafka broker", "protocol": "kafka", "variables": {"port": {"default": "9092"}}}, "staging": {"url": "kafka", "description": "Kafka broker", "protocol": "kafka-secure", "security": {"type": "plain"}, "variables": {"port": {"default": "9092"}}}}}'

actual = kafka_brokers.json()
print(f"JSON={actual}")
assert actual == expected, actual

actual = KafkaBrokers.parse_raw(kafka_brokers.json())
pprint(actual)
assert actual == kafka_brokers
```

``` python
brokers_json = '{"brokers": {"dev": {"url": "kafka", "description": "Kafka broker", "protocol": "kafka", "variables": {"port": {"default": "9092"}}}, "staging": {"url": "kafka", "description": "Kafka broker", "protocol": "kafka-secure", "security": {"type": "plain"}, "variables": {"port": {"default": "9092"}}}}}'
kafka_brokers = KafkaBrokers.parse_raw(brokers_json)
pprint(kafka_brokers)

my_contact = ContactInfo(
    name="ACME", url="https://www.acme.com", email="noreply@acme.com"
)
kafka_service_info = KafkaServiceInfo(contact=my_contact)
pprint(kafka_service_info)


class MyInfo(KafkaMessage):
    mobile: str = Field(..., example="+385987654321")
    name: str = Field(..., example="James Bond")


class MyMsgUrl(KafkaMessage):
    info: MyInfo = Field(..., example=dict(mobile="+385987654321", name="James Bond"))
    url: HttpUrl = Field(..., example="https://sis.gov.uk/agents/007")


class MyMsgEmail(KafkaMessage):
    msg_url: MyMsgUrl = Field(
        ...,
        example=dict(
            info=dict(mobile="+385987654321", name="James Bond"),
            url="https://sis.gov.uk/agents/007",
        ),
    )
    email: EmailStr = Field(..., example="agent-007@sis.gov.uk")


def on_my_topic_one(msg: MyMsgUrl) -> None:
    raise NotImplemented


async def on_my_topic_2(msg: MyMsgEmail) -> None:
    raise NotImplemented


async def to_my_topic_3(msg) -> MyMsgUrl:
    raise NotImplemented


async def to_my_topic_4(msg) -> KafkaEvent[MyMsgEmail]:
    raise NotImplemented
    
async def to_my_topic_5(msg) -> KafkaEvent[List[MyMsgEmail]]:
    raise NotImplemented


consumers = {"my_topic_1": on_my_topic_one, "my_topic_2": on_my_topic_2}
producers = {"my_topic_3": to_my_topic_3, "my_topic_4": to_my_topic_4, "my_topic_5": to_my_topic_5}

pprint(dict(consumers=consumers, producers=producers))
assert set(consumers.keys()) == set(["my_topic_1", "my_topic_2"])
assert set(producers.keys()) == set(["my_topic_3", "my_topic_4", "my_topic_5"])
```

``` python
expected = MyMsgUrl
actual = _get_msg_cls_for_producer(to_my_topic_3)
display(actual)
assert actual == expected
```

    __main__.MyMsgUrl

``` python
expected = MyMsgEmail
actual = _get_msg_cls_for_producer(to_my_topic_4)
display(actual)
assert actual == expected
```

    __main__.MyMsgEmail

``` python
expected = MyMsgEmail
actual = _get_msg_cls_for_producer(to_my_topic_5)
display(actual)
assert actual == expected
```

    __main__.MyMsgEmail

``` python
def no_return(i: int):
    pass


with pytest.raises(ValueError) as e:
    _get_msg_cls_for_producer(no_return)

assert e.value.args == (
    "Producer function must have a defined return value, got <class 'NoneType'> as return value",
)
```

``` python
expected = MyMsgUrl
actual = _get_msg_cls_for_consumer(on_my_topic_one)
display(actual)
assert actual == expected
```

    __main__.MyMsgUrl

``` python
def no_input():
    pass


with pytest.raises(ValueError) as e:
    _get_msg_cls_for_consumer(no_input)

assert e.value.args == ("Consumer function first param must be a BaseModel subclass msg, got []",)


def has_return(a: int) -> int:
    pass


with pytest.raises(ValueError) as e:
    _get_msg_cls_for_consumer(has_return)

assert e.value.args == ("Consumer function cannot return any value, got <class 'int'>",)
```

``` python
expected = {"subscribe": {"message": {"$ref": "#/components/messages/MyMsgEmail"}}}

actual = _get_topic_dict(on_my_topic_2, "subscribe")
pprint(actual)

assert actual == expected
```

``` python
expected = {"publish": {"message": {"$ref": "#/components/messages/MyMsgEmail"}}}

actual = _get_topic_dict(to_my_topic_4, "publish")
pprint(actual)

assert actual == expected
```

``` python
expected = {
    "my_topic_1": {
        "subscribe": {"message": {"$ref": "#/components/messages/MyMsgUrl"}}
    },
    "my_topic_2": {
        "subscribe": {"message": {"$ref": "#/components/messages/MyMsgEmail"}}
    },
    "my_topic_3": {"publish": {"message": {"$ref": "#/components/messages/MyMsgUrl"}}},
    "my_topic_4": {
        "publish": {"message": {"$ref": "#/components/messages/MyMsgEmail"}}
    },
    "my_topic_5": {
        "publish": {"message": {"$ref": "#/components/messages/MyMsgEmail"}}
    },
}
actual = _get_channels_schema(consumers, producers)
pprint(actual)

assert actual == expected
```

``` python
expected = {
    "definitions": {
        "MyInfo": {
            "title": "MyInfo",
            "type": "object",
            "properties": {
                "mobile": {
                    "title": "Mobile",
                    "example": "+385987654321",
                    "type": "string",
                },
                "name": {"title": "Name", "example": "James Bond", "type": "string"},
            },
            "required": ["mobile", "name"],
        },
        "MyMsgUrl": {
            "title": "MyMsgUrl",
            "type": "object",
            "properties": {
                "info": {
                    "title": "Info",
                    "example": {"mobile": "+385987654321", "name": "James Bond"},
                    "allOf": [{"$ref": "#/definitions/MyInfo"}],
                },
                "url": {
                    "title": "Url",
                    "example": "https://sis.gov.uk/agents/007",
                    "minLength": 1,
                    "maxLength": 2083,
                    "format": "uri",
                    "type": "string",
                },
            },
            "required": ["info", "url"],
        },
        "MyMsgEmail": {
            "title": "MyMsgEmail",
            "type": "object",
            "properties": {
                "msg_url": {
                    "title": "Msg Url",
                    "example": {
                        "info": {"mobile": "+385987654321", "name": "James Bond"},
                        "url": "https://sis.gov.uk/agents/007",
                    },
                    "allOf": [{"$ref": "#/definitions/MyMsgUrl"}],
                },
                "email": {
                    "title": "Email",
                    "example": "agent-007@sis.gov.uk",
                    "type": "string",
                    "format": "email",
                },
            },
            "required": ["msg_url", "email"],
        },
    }
}

msg_definitions = _get_kafka_msg_definitions(consumers, producers)
assert msg_definitions == expected
```

``` python
expected = {
    "msg_url": {
        "info": {"name": "James Bond", "mobile": "+385987654321"},
        "url": "https://sis.gov.uk/agents/007",
    },
    "email": "agent-007@sis.gov.uk",
}

actual = _get_example(MyMsgEmail)
pprint(actual)

assert actual == expected
```

``` python
expected = {
    "MyInfo": {
        "payload": {
            "title": "MyInfo",
            "type": "object",
            "properties": {
                "mobile": {
                    "title": "Mobile",
                    "example": "+385987654321",
                    "type": "string",
                },
                "name": {"title": "Name", "example": "James Bond", "type": "string"},
            },
            "required": ["mobile", "name"],
        }
    },
    "MyMsgUrl": {
        "payload": {
            "title": "MyMsgUrl",
            "type": "object",
            "properties": {
                "info": {
                    "title": "Info",
                    "example": {"mobile": "+385987654321", "name": "James Bond"},
                    "allOf": [{"$ref": "#/definitions/MyInfo"}],
                },
                "url": {
                    "title": "Url",
                    "example": "https://sis.gov.uk/agents/007",
                    "minLength": 1,
                    "maxLength": 2083,
                    "format": "uri",
                    "type": "string",
                },
            },
            "required": ["info", "url"],
            "example": {
                "info": {"mobile": "+385987654321", "name": "James Bond"},
                "url": "https://sis.gov.uk/agents/007",
            },
        }
    },
    "MyMsgEmail": {
        "payload": {
            "title": "MyMsgEmail",
            "type": "object",
            "properties": {
                "msg_url": {
                    "title": "Msg Url",
                    "example": {
                        "info": {"mobile": "+385987654321", "name": "James Bond"},
                        "url": "https://sis.gov.uk/agents/007",
                    },
                    "allOf": [{"$ref": "#/definitions/MyMsgUrl"}],
                },
                "email": {
                    "title": "Email",
                    "example": "agent-007@sis.gov.uk",
                    "type": "string",
                    "format": "email",
                },
            },
            "required": ["msg_url", "email"],
            "example": {
                "msg_url": {
                    "info": {"mobile": "+385987654321", "name": "James Bond"},
                    "url": "https://sis.gov.uk/agents/007",
                },
                "email": "agent-007@sis.gov.uk",
            },
        }
    },
}

actual = _get_msg_definitions_with_examples(consumers, producers)
pprint(actual)
assert actual == expected
```

expected = { “staging_default_security": {“type": “plain"},
“production_default_security": {“type": “plain"}, }

brokers = KafkaBrokers( brokers={ “dev": KafkaBroker( url=“localhost",
description=“dev", port=“9092", ) } )

display(brokers)

actual = \_get_security_schemes(brokers) pprint(actual) assert actual ==
expected, actual

``` python
components = _get_components_schema(consumers, producers, kafka_brokers)
pprint(components)
```

``` python
expected = {
    "dev": {
        "url": "kafka",
        "description": "Kafka broker",
        "protocol": "kafka",
        "variables": {"port": {"default": "9092"}},
    },
    "staging": {
        "url": "kafka",
        "description": "Kafka broker",
        "protocol": "kafka-secure",
        "security": [{"staging_default_security": []}],
        "variables": {"port": {"default": "9092"}},
    },
}

actual = _get_servers_schema(kafka_brokers)
pprint(actual)
assert actual == expected, actual
```

``` python
expected = {
    "asyncapi": "2.5.0",
    "info": {
        "title": "Title",
        "version": "0.0.1",
        "description": "Description of the service",
        "contact": {
            "name": "ACME",
            "url": "https://www.acme.com",
            "email": "noreply@acme.com",
        },
    },
    "servers": {
        "dev": {
            "url": "kafka",
            "description": "Kafka broker",
            "protocol": "kafka",
            "variables": {"port": {"default": "9092"}},
        },
        "staging": {
            "url": "kafka",
            "description": "Kafka broker",
            "protocol": "kafka-secure",
            "security": [{"staging_default_security": []}],
            "variables": {"port": {"default": "9092"}},
        },
    },
    "channels": {
        "my_topic_1": {
            "subscribe": {"message": {"$ref": "#/components/messages/MyMsgUrl"}}
        },
        "my_topic_2": {
            "subscribe": {"message": {"$ref": "#/components/messages/MyMsgEmail"}}
        },
        "my_topic_3": {
            "publish": {"message": {"$ref": "#/components/messages/MyMsgUrl"}}
        },
        "my_topic_4": {
            "publish": {"message": {"$ref": "#/components/messages/MyMsgEmail"}}
        },
        "my_topic_5": {
            "publish": {"message": {"$ref": "#/components/messages/MyMsgEmail"}}
        },
    },
    "components": {
        "securitySchemes": {"staging_default_security": {"type": "plain"}},
        "messages": {
            "MyMsgUrl": {
                "payload": {
                    "title": "MyMsgUrl",
                    "type": "object",
                    "properties": {
                        "info": {
                            "title": "Info",
                            "example": {
                                "mobile": "+385987654321",
                                "name": "James Bond",
                            },
                            "allOf": [{"$ref": "#/components/schemas/MyInfo"}],
                        },
                        "url": {
                            "title": "Url",
                            "example": "https://sis.gov.uk/agents/007",
                            "minLength": 1,
                            "maxLength": 2083,
                            "format": "uri",
                            "type": "string",
                        },
                    },
                    "required": ["info", "url"],
                    "example": {
                        "info": {"mobile": "+385987654321", "name": "James Bond"},
                        "url": "https://sis.gov.uk/agents/007",
                    },
                }
            },
            "MyMsgEmail": {
                "payload": {
                    "title": "MyMsgEmail",
                    "type": "object",
                    "properties": {
                        "msg_url": {
                            "title": "Msg Url",
                            "example": {
                                "info": {
                                    "mobile": "+385987654321",
                                    "name": "James Bond",
                                },
                                "url": "https://sis.gov.uk/agents/007",
                            },
                            "allOf": [{"$ref": "#/components/messages/MyMsgUrl"}],
                        },
                        "email": {
                            "title": "Email",
                            "example": "agent-007@sis.gov.uk",
                            "type": "string",
                            "format": "email",
                        },
                    },
                    "required": ["msg_url", "email"],
                    "example": {
                        "msg_url": {
                            "info": {"mobile": "+385987654321", "name": "James Bond"},
                            "url": "https://sis.gov.uk/agents/007",
                        },
                        "email": "agent-007@sis.gov.uk",
                    },
                }
            },
        },
        "schemas": {
            "MyInfo": {
                "payload": {
                    "title": "MyInfo",
                    "type": "object",
                    "properties": {
                        "mobile": {
                            "title": "Mobile",
                            "example": "+385987654321",
                            "type": "string",
                        },
                        "name": {
                            "title": "Name",
                            "example": "James Bond",
                            "type": "string",
                        },
                    },
                    "required": ["mobile", "name"],
                }
            }
        },
    },
}
asyncapi_schema = _get_asyncapi_schema(
    consumers, producers, kafka_brokers, kafka_service_info
)
pprint(asyncapi_schema)
assert asyncapi_schema == expected
```

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L359"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### yaml_file_cmp

>      yaml_file_cmp (file_1:Union[pathlib.Path,str],
>                     file_2:Union[pathlib.Path,str])

``` python
with tempfile.TemporaryDirectory() as d:
    try:
        asyncapi_path = Path(d).parent / "003_AsyncAPI" / "asyncapi"
        if asyncapi_path.exists():
            shutil.rmtree(asyncapi_path)
        spec_path = Path(asyncapi_path) / "spec" / "asyncapi.yml"

        is_spec_built = _generate_async_spec(
            consumers=consumers,
            producers=producers,
            kafka_brokers=kafka_brokers,
            kafka_service_info=kafka_service_info,
            spec_path=spec_path,
            force_rebuild=False,
        )
        assert is_spec_built
        assert (Path(asyncapi_path) / "spec" / "asyncapi.yml").exists()

        is_spec_built = _generate_async_spec(
            consumers=consumers,
            producers=producers,
            kafka_brokers=kafka_brokers,
            kafka_service_info=kafka_service_info,
            spec_path=spec_path,
            force_rebuild=False,
        )
        assert not is_spec_built
        assert (Path(asyncapi_path) / "spec" / "asyncapi.yml").exists()

        is_spec_built = _generate_async_spec(
            consumers=consumers,
            producers=producers,
            kafka_brokers=kafka_brokers,
            kafka_service_info=kafka_service_info,
            spec_path=spec_path,
            force_rebuild=True,
        )
        assert is_spec_built
        assert (Path(asyncapi_path) / "spec" / "asyncapi.yml").exists()

    finally:
        shutil.rmtree(asyncapi_path)
```

    [INFO] __main__: Old async specifications at '/tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml' does not exist.
    [INFO] __main__: New async specifications generated at: '/tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml'
    [INFO] __main__: Keeping the old async specifications at: '/tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml'
    [INFO] __main__: New async specifications generated at: '/tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml'

``` python
with tempfile.TemporaryDirectory() as d:
    try:
        asyncapi_path = Path(d).parent / "003_AsyncAPI" / "asyncapi"
        if asyncapi_path.exists():
            shutil.rmtree(asyncapi_path)
        spec_path = Path(asyncapi_path) / "spec" / "asyncapi.yml"
        docs_path = Path(asyncapi_path) / "docs"

        is_spec_built = _generate_async_spec(
            consumers=consumers,
            producers=producers,
            kafka_brokers=kafka_brokers,
            kafka_service_info=kafka_service_info,
            spec_path=spec_path,
            force_rebuild=False,
        )

        _generate_async_docs(
            spec_path=spec_path,
            docs_path=docs_path,
        )
        assert docs_path.exists()
    finally:
        shutil.rmtree(asyncapi_path)
```

    [INFO] __main__: Old async specifications at '/tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml' does not exist.
    [INFO] __main__: New async specifications generated at: '/tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml'
    [INFO] __main__: Async docs generated at '/tmp/003_AsyncAPI/asyncapi/docs'
    [INFO] __main__: Output of '$ npx -y -p @asyncapi/generator ag /tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml @asyncapi/html-template -o /tmp/003_AsyncAPI/asyncapi/docs --force-write'npm WARN deprecated har-validator@5.1.5: this library is no longer supported
    npm WARN deprecated uuid@3.4.0: Please upgrade  to version 7 or higher.  Older versions may use Math.random() in certain circumstances, which is known to be problematic.  See https://v8.dev/blog/math-random for details.
    npm WARN deprecated readdir-scoped-modules@1.1.0: This functionality has been moved to @npmcli/fs
    npm WARN deprecated @npmcli/move-file@1.1.2: This functionality has been moved to @npmcli/fs
    npm WARN deprecated request@2.88.2: request has been deprecated, see https://github.com/request/request/issues/3142
    npm WARN deprecated mkdirp@0.3.5: Legacy versions of mkdirp are no longer supported. Please update to mkdirp 1.x. (Note that the API surface has changed to use Promises in 1.x.)
    npm WARN deprecated mkdirp@0.3.5: Legacy versions of mkdirp are no longer supported. Please update to mkdirp 1.x. (Note that the API surface has changed to use Promises in 1.x.)


    Done! ✨
    Check out your shiny new generated files at /tmp/003_AsyncAPI/asyncapi/docs.

    npm notice 
    npm notice New minor version of npm available! 9.5.0 -> 9.6.5
    npm notice Changelog: <https://github.com/npm/cli/releases/tag/v9.6.5>
    npm notice Run `npm install -g npm@9.6.5` to update!
    npm notice 

------------------------------------------------------------------------

<a
href="https://github.com/airtai/fastkafka/blob/main/fastkafka/_components/asyncapi.py#L451"
target="_blank" style={{float: 'right', fontSize: 'smaller'}}>source</a>

### export_async_spec

>      export_async_spec (consumers:Dict[str,Union[Callable[[pydantic.main.BaseM
>                         odel],Awaitable[NoneType]],Callable[[pydantic.main.Bas
>                         eModel,fastkafka.EventMetadata],Awaitable[NoneType]],C
>                         allable[[pydantic.main.BaseModel],NoneType],Callable[[
>                         pydantic.main.BaseModel,fastkafka.EventMetadata],NoneT
>                         ype]]], producers:Dict[str,Union[Callable[...,Union[py
>                         dantic.main.BaseModel,fastkafka.KafkaEvent[pydantic.ma
>                         in.BaseModel],List[pydantic.main.BaseModel],fastkafka.
>                         KafkaEvent[List[pydantic.main.BaseModel]]]],Callable[.
>                         ..,Awaitable[Union[pydantic.main.BaseModel,fastkafka.K
>                         afkaEvent[pydantic.main.BaseModel],List[pydantic.main.
>                         BaseModel],fastkafka.KafkaEvent[List[pydantic.main.Bas
>                         eModel]]]]]]], kafka_brokers:__main__.KafkaBrokers,
>                         kafka_service_info:__main__.KafkaServiceInfo,
>                         asyncapi_path:Union[pathlib.Path,str],
>                         force_rebuild:bool=True)

Export async specification to a given path

Params: path: path where the specification will be exported. If parent
subdirectories do not exist, they will be created.

``` python
with tempfile.TemporaryDirectory() as d:
    try:
        asyncapi_path = Path(d).parent / "003_AsyncAPI" / "asyncapi"
        if asyncapi_path.exists():
            shutil.rmtree(asyncapi_path)

        export_async_spec(
            consumers=consumers,
            producers=producers,
            kafka_brokers=kafka_brokers,
            kafka_service_info=kafka_service_info,
            asyncapi_path=asyncapi_path,
            force_rebuild=False,
        )
        #         !ls -al {asyncapi_path}
        assert (Path(asyncapi_path) / "spec" / "asyncapi.yml").exists()
        assert (Path(asyncapi_path) / "docs" / "index.html").exists()
    finally:
        shutil.rmtree(asyncapi_path)
```

    [INFO] __main__: Old async specifications at '/tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml' does not exist.
    [INFO] __main__: New async specifications generated at: '/tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml'
    [INFO] __main__: Async docs generated at '/tmp/003_AsyncAPI/asyncapi/docs'
    [INFO] __main__: Output of '$ npx -y -p @asyncapi/generator ag /tmp/003_AsyncAPI/asyncapi/spec/asyncapi.yml @asyncapi/html-template -o /tmp/003_AsyncAPI/asyncapi/docs --force-write'

    Done! ✨
    Check out your shiny new generated files at /tmp/003_AsyncAPI/asyncapi/docs.
